changed toList to collect toList